--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </tr>
          </table>
 
-         <img src="img/rocket.png" alt="rocket" class="rocket" data-rellax-speed="10">
+         <img src="img/falcon-heavy.png" alt="rocket" class="rocket" data-rellax-speed="14">
 
          <h2 class="features-title">UNMATCHED <br /> PERFORMANCE</h2>
          <p class="features-text">
@@ -86,6 +86,24 @@
          </p>
       </div>
    </section>
+   <footer class="footer">
+      <img src="img/logo.svg" alt="Logo Space X" class="logo">
+      <nav class="footer-nav">
+         <ul class="list">
+            <li class="item"><a href="#" class="item-link">Twitter</a></li>
+            <li class="item"><a href="#" class="item-link">Youtube</a></li>
+            <li class="item"><a href="#" class="item-link">Instagram</a></li>
+            <li class="item"><a href="#" class="item-link">Flickr</a></li>
+            <li class="item"><a href="#" class="item-link">LinkedIn</a></li>
+            <li class="item"><a href="#" class="item-link">Privacy</a></li>
+            <li class="item"><a href="#" class="item-link">Policy</a></li>
+         </ul>
+      </nav>
+      <p class="footer-text">
+         For additional questions, contact <a class="footer-link" href="mailto:rideshare@spacex.com">rideshare@spacex.com</a>
+      </p>
+      <a href="#" class="button">Contact us</a>
+   </footer>
 
 
 
