--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="css/style.css">
    <link rel="stylesheet" href="css/vidbg.css">
+   <link rel="stylesheet" href="css/aos.css">
 </head>
 <body>
    <header class="header">
-      <img src="img/logo.svg" alt="Loge Spice X" class="logo">
+      <img src="img/logo.svg" 
+      alt="Loge Spice X" 
+      class="logo" 
+      data-aos="fade-down"
+      />
       <nav class="main-nav">
          <ul class="list">
             <li class="item">
@@ -110,5 +115,6 @@
    <script src="js/vidbg.js"></script>
    <script src="js/rellax.min.js"></script>
    <script src="js/main.js"></script>
+   <script src="js/aos.js"></script>
 </body>
 </html>
