--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       class="logo" 
       data-aos="fade-down"
       />
-      <nav class="main-nav">
+      <nav class="main-nav" data-aos="fade-down">
          <ul class="list">
             <li class="item">
                <a href="#" class="item-link">Falcon 9</a>
@@ -32,7 +32,7 @@
             </li>
          </ul>
       </nav>
-      <nav class="secondary-nav">
+      <nav class="secondary-nav" data-aos="fade-down">
          <ul class="list">
             <li class="item">
                <a href="#" class="item-link">About</a>
@@ -47,16 +47,16 @@
       </nav>
    </header>
    <section class="main">
-      <h1 class="title">Falcon Heavy</h1>
-      <p class="description">
+      <h1 class="title" data-aos="fade-up" data-aos-delay="600">Falcon Heavy</h1>
+      <p class="description" data-aos="fade-up" data-aos-delay="1000">
          The most powerful operational rocket in the world by a factor of two
       </p>
    </section>
-   <div class="video"></div>
+   <div class="video" data-aos="fade-up" data-aos-delay="1500"></div>
    <section class="features">
       <div class="overview">
-         <h2 class="features-title">Falcon Heavy <br /> Overview</h2>
-         <table class="table">
+         <h2 class="features-title" data-aos="fade-zoom-in" data-aos-delay="300">Falcon Heavy <br /> Overview</h2>
+         <table class="table" data-aos="fade-zoom-in" data-aos-delay="300">
             <tr>
                <td class="table-column">HEIGHT</td>
                <td class="table-column">70 m / 229.6 ft</td>
@@ -85,8 +85,8 @@
 
          <img src="img/falcon-heavy.png" alt="rocket" class="rocket" data-rellax-speed="14">
 
-         <h2 class="features-title">UNMATCHED <br /> PERFORMANCE</h2>
-         <p class="features-text">
+         <h2 class="features-title" data-aos="fade-zoom-in" data-aos-delay="300">UNMATCHED <br /> PERFORMANCE</h2>
+         <p class="features-text" data-aos="fade-zoom-in" data-aos-delay="300">
             With more than 5 million pounds of thrust at liftoff, Falcon Heavy is the most capable rocket flying. By comparison, the liftoff thrust of the Falcon Heavy equals approximately eighteen 747 aircraft at full power. Falcon Heavy can lift the equivalent of a fully loaded 737 jetliner—complete with passengers, luggage and fuel—to orbit.
          </p>
       </div>
@@ -111,10 +111,9 @@
    </footer>
 
 
-
+   <script src="js/aos.js"></script>
    <script src="js/vidbg.js"></script>
    <script src="js/rellax.min.js"></script>
    <script src="js/main.js"></script>
-   <script src="js/aos.js"></script>
 </body>
 </html>
